gobmkida/c1/gtp_top_moves_black
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves_black/src/interface/play_gtp.c:2750:18: error: use of undeclared identifier 'dword_9AC3A8'
if ( *( float *)&dword_9AC3A8[v1] > 0.0 ) 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves_black/src/interface/play_gtp.c:2752:19: error: use of undeclared identifier 'dword_9AC3D8'
gtp_print_vertex( dword_9AC3D8[v1] / 20 - 1, dword_9AC3D8[v1] + ~( 20 * ( dword_9AC3D8[v1] / 20))); 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves_black/src/interface/play_gtp.c:2752:75: error: use of undeclared identifier 'dword_9AC3D8'
gtp_print_vertex( dword_9AC3D8[v1] / 20 - 1, dword_9AC3D8[v1] + ~( 20 * ( dword_9AC3D8[v1] / 20))); 
                                                                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves_black/src/interface/play_gtp.c:2752:46: error: use of undeclared identifier 'dword_9AC3D8'
gtp_print_vertex( dword_9AC3D8[v1] / 20 - 1, dword_9AC3D8[v1] + ~( 20 * ( dword_9AC3D8[v1] / 20))); 
                                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves_black/src/interface/play_gtp.c:2753:35: error: use of undeclared identifier 'dword_9AC3A8'
gtp_printf( " %.2f ", *( float *)&dword_9AC3A8[v1]); 
                                  ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves_black/src/obj/2/play_gtp.o] Error 1
